[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Assets/player1.png" type="Texture" id=2]
[ext_resource path="res://Player/Assets/player8.png" type="Texture" id=3]
[ext_resource path="res://Player/Assets/player5.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/player6.png" type="Texture" id=5]
[ext_resource path="res://Player/Assets/player7.png" type="Texture" id=6]
[ext_resource path="res://Player/Assets/player2.png" type="Texture" id=7]
[ext_resource path="res://Player/Assets/player3.png" type="Texture" id=8]
[ext_resource path="res://Player/Assets/player4.png" type="Texture" id=9]
[ext_resource path="res://Player/Assets/player9.png" type="Texture" id=10]
[ext_resource path="res://Player/Assets/power-up.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "shield",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.11251, 9.925 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.78439, 13.3305 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 11 ), null, ExtResource( 11 ), ExtResource( 11 ), null, ExtResource( 11 ), ExtResource( 11 ), null, ExtResource( 11 ), ExtResource( 11 ), null ],
"loop": true,
"name": "on",
"speed": 7.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fall"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.21875, 2.125 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 2 )

[node name="Hit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( -0.125, 4.25 )
scale = Vector2( 0.655281, -0.547615 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="PowerupAlert" type="AnimatedSprite" parent="."]
position = Vector2( 0, -20.3438 )
frames = SubResource( 4 )
animation = "off"
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="PowerupAlert" to="." method="_on_PowerupAlert_animation_finished"]
